[gd_scene load_steps=13 format=3 uid="uid://cw3xfxax0cpjx"]

[ext_resource type="Script" path="res://Client.gd" id="1_10a01"]
[ext_resource type="Texture2D" uid="uid://dvr1ximwuuemh" path="res://Game/assets/Menu/MenuPicture/Lobby.jpg" id="1_e4n57"]
[ext_resource type="Script" path="res://Server.gd" id="2_h6iss"]
[ext_resource type="AudioStream" uid="uid://by375dppuhwy" path="res://Game/assets/Menu/Music/AdhesiveWombat - Night Shade NO COPYRIGHT 8-bit Music.mp3" id="3_euoa1"]
[ext_resource type="Texture2D" uid="uid://bjrudm1lro7u0" path="res://Game/assets/Menu/Buttons/PNG/CGB02-blue_M_btn_bis.png" id="4_pduc1"]
[ext_resource type="Texture2D" uid="uid://by88p2v3d38xv" path="res://Game/assets/Menu/Buttons/PNG/CGB02-green_L_btn_bis.png" id="6_butvm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4c1h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8bnfq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7kans"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vx7xk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nnh8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_718wl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1008.0
offset_bottom = 567.0
texture = ExtResource("1_e4n57")
expand_mode = 1

[node name="Client" type="Node" parent="TextureRect"]
script = ExtResource("1_10a01")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="TextureRect/Client"]
stream = ExtResource("3_euoa1")
bus = &"Music"

[node name="Username" type="LineEdit" parent="TextureRect/Client"]
offset_left = 205.0
offset_top = 60.0
offset_right = 372.0
offset_bottom = 91.0

[node name="Username" type="Label" parent="TextureRect/Client/Username"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -150.0
offset_right = -14.0
offset_bottom = 31.0
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="TextureRect/Client"]
offset_left = 203.0
offset_top = 150.0
offset_right = 370.0
offset_bottom = 181.0
placeholder_text = "Lobby Code"

[node name="Server" type="Node" parent="TextureRect"]
script = ExtResource("2_h6iss")

[node name="Back" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 872.0
offset_top = 512.0
offset_right = 1008.0
offset_bottom = 567.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4c1h")
text = "Back"
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="StartGame" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 55.0
offset_top = 292.0
offset_right = 191.0
offset_bottom = 335.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8bnfq")
text = "Start "
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="JoinLobby" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 55.0
offset_top = 144.0
offset_right = 191.0
offset_bottom = 187.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_7kans")
text = "Join "
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="Copy" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 489.0
offset_top = 144.0
offset_right = 625.0
offset_bottom = 187.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vx7xk")
text = "Copy"
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="ItemList" type="ItemList" parent="TextureRect"]
layout_mode = 0
offset_left = 417.0
offset_top = 50.0
offset_right = 725.0
offset_bottom = 118.0

[node name="lobbyCode" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 388.0
offset_top = 151.0
offset_right = 524.0
offset_bottom = 182.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyStatus" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 600.0
offset_top = 149.0
offset_right = 736.0
offset_bottom = 180.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlobalStatus" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1007.0
offset_bottom = 66.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaveLobby" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 55.0
offset_top = 193.0
offset_right = 191.0
offset_bottom = 236.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_nnh8b")
text = "Leave"
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="Load Level" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 55.0
offset_top = 341.0
offset_right = 191.0
offset_bottom = 384.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_718wl")
text = "Solo"
icon = ExtResource("4_pduc1")
flat = true
icon_alignment = 1

[node name="ServerModImage" type="Sprite2D" parent="TextureRect"]
position = Vector2(512, 286.5)
texture = ExtResource("6_butvm")

[node name="ServerMod" type="Label" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 371.0
offset_top = 272.5
offset_right = 657.0
offset_bottom = 295.5
text = "Server mode ! Running on port 8915 !"

[connection signal="text_changed" from="TextureRect/Client/Username" to="TextureRect/Client" method="_on_username_text_changed"]
[connection signal="button_down" from="TextureRect/Back" to="TextureRect/Client" method="_on_back_button_down"]
[connection signal="button_down" from="TextureRect/StartGame" to="TextureRect/Client" method="_on_button_button_down"]
[connection signal="button_down" from="TextureRect/JoinLobby" to="TextureRect/Client" method="_on_join_lobby_button_down"]
[connection signal="button_down" from="TextureRect/Copy" to="TextureRect/Client" method="_on_copy_button_down"]
[connection signal="button_down" from="TextureRect/LeaveLobby" to="TextureRect/Client" method="_on_leave_lobby_button_down"]
[connection signal="button_down" from="TextureRect/Load Level" to="TextureRect/Client" method="_on_load_level_button_down"]
